@@ -173,6 +173,7 @@ Requirements are:
 	* libdjvulibre	  ( https://djvu.sourceforge.net/ )
 	* libwebp         (https://github.com/webmproject/libwebp/)
 	* libavif         (https://github.com/AOMediaCodec/libavif/)
+	* libqoi          ( https://qoiformat.org/ )
 	* ...
 
 
@@ -229,6 +230,7 @@ You can also run separately parts of `make tests`:
 	# experimental, not recommended:
 	sudo apt-get install libpoppler-dev libdjvulibre-dev libspectre-dev
 	sudo apt-get install libarchive-dev
+	sudo apt-get install libqoi-dev
 	svn co http://svn.savannah.nongnu.org/svn/fbi-improved/trunk/ fim
 	cd fim
 	autoreconf -i
