@@ -4,6 +4,7 @@
                 Version 0.7-trunk
 
  * Still work-in-progress. Please use stable branch 0.6 for now
+
 # (r2005-r2038)
  * New graphical windowed output mode via GTK, selected with -o gtk (in progress)
 # (r1997)
@@ -12,6 +13,8 @@
  * Load XCF (Gimp) files via the xcf2pnm utility
 # (r1991-r1994,r1998-r1999)
  * Documentation and self-documentation improvements
+# (r2039)
+ * Experimental support for reading QOI files via libqoi
 # (r1990,r2000,r2004)
  * Experimental support for reading AVIF images via libavif
 # (r1989)
