@@ -4,15 +4,17 @@
                 Version 0.7-trunk
 
  * Still work-in-progress. Please use stable branch 0.6 for now
+
  * New graphical windowed output mode via GTK, selected with -o gtk (in progress)
  * When loading via an external converter, keep track of it in i:_external_decoder_program
  * Load XCF (Gimp) files via the xcf2pnm utility
  * Documentation and self-documentation improvements
+ * Experimental support for reading QOI files via libqoi
  * Experimental support for reading AVIF images via libavif
  * Experimental support for reading WebP images via libwebp
  * FIM requires a compiler supporting at least C++11
- * More tests.
- * Enable descriptions to be searched in "goto /PATTERN/" by keeping the newly introduced 'D' in _re_search_opts.
+ * More tests
+ * Enable descriptions to be searched in "goto /PATTERN/" by keeping the newly introduced 'D' in _re_search_opts
 
                 Version 0.6-rc2
 
